--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             'worldnews',
             'imsorryjon'
         ]
-        fetchReddit(subs).then(posts => {
-            console.log(posts)
-        })
+        main(subs)
     </script>
 
 </html>
