--- a/usage.html
+++ b/usage.html
@@ -8,17 +8,17 @@
         <div class="row">
             <div class= "col-10">
                 <h2><a href="https://khlam.github.io/" style="text-decoration:none">khlam.github.io</a>/reddit/usage</h2>
-                <h4 id="title-banner">Whitelisted-only Reddit browsing without an account.</h4>
+                <h4 id="title-banner">Whitelisted Reddit browsing without an account.</h4>
             </div>
         </div>
         <div class="row">
+            Append subreddit names to the end of the URL, `;` delimited.
+            <br>
             <a href = "./index.html?subreddits=worldnews">?subreddits=worldnews</a>
             <br>
             <a href = "./index.html?subreddits=worldnews;imsorryjon;news;buildapcsales;linux;privacy;videos">?subreddits=worldnews;imsorryjon;news;buildapcsales;linux;privacy;videos</a>
         </div>
 
-        
-            
     </body>
 
 
